修复点击内容5次会变成一个屏幕的问题

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ document.body.addEventListener('click', function() {
   }, 1000)
 })
 
+document.addEventListener('click', (e) => {
+    if(e.target.className === 'ace_content') e.stopPropagation();
+}, true)
+
     })()
 
 
